--- a/adventure/index.html
+++ b/adventure/index.html
@@ -8,6 +8,11 @@
     <title>Adventure0</title>
   </head>
   <body>
+    <section>
+      <h1>Adventure0</h1>
+      <span>By: Jeff MacPherson</span>
+    </section>
+
     <script type="module" src="main.js"></script>
   </body>
 </html>
